crates/formatter/tests/snapshots/snapshots__migrations__000175_add_user_theme_preference.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users add column theme_preference text not null default '';

comment on column users.theme_preference is '"" can be interpreted as "the user does not care", falling back to the default theme';
