crates/formatter/tests/snapshots/snapshots__migrations__000176_not_null_users_avatar_url.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users alter column avatar_url drop not null,
alter column avatar_url drop default;
