crates/formatter/tests/snapshots/snapshots__migrations__000177_drop_provisioner_updated_at.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_daemons drop column updated_at;
