crates/formatter/tests/snapshots/snapshots__migrations__000178_provisioner_daemon_idx_owner.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only provisioner_daemons
	drop constraint if exists provisioner_daemons_name_key;

create unique index if not exists idx_provisioner_daemons_name_owner_key
on provisioner_daemons
using btree(name, lower((tags ->> 'owner')::text));

comment on index idx_provisioner_daemons_name_owner_key is 'Relax uniqueness constraint for provisioner daemon names';
