crates/formatter/tests/snapshots/snapshots__migrations__000181_coalesce_provisioner_daemon_idx_owner.up.snap
---
source: crates/formatter/tests/snapshots.rs
assertion_line: 30
expression: formatted
---
drop index if exists idx_provisioner_daemons_name_owner_key;

create unique index if not exists idx_provisioner_daemons_name_owner_key
	on provisioner_daemons
	using btree(name, LOWER(COALESCE(tags ->> 'owner', '')::text));

comment on index idx_provisioner_daemons_name_owner_key is 'Allow unique provisioner daemon names by user';
