crates/formatter/tests/snapshots/snapshots__migrations__000182_oauth2_provider.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table oauth2_provider_app_secrets;
drop table oauth2_provider_apps;
